tests/ui/lint/snapshots/redundant_operation_and_true.snap
---
source: tests/ui/lint/mod.rs
---
  ● Operation has no effect
   ╭─[test.lis:4:11]
 3 │   let b = true
 4 │   let _ = b && true
   ·           ────┬────
   ·               ╰── one operand leaves the other unchanged
 5 │ }
   ╰────
  help: Simplify this operation to its other operand · code: [lint.redundant_operation]
