tests/ui/lint/snapshots/redundant_operation_modulo_one.snap
---
source: tests/ui/lint/mod.rs
---
  ● Operation always evaluates to `0`
   ╭─[test.lis:4:11]
 3 │   let x = 5
 4 │   let _ = x % 1
   ·           ──┬──
   ·             ╰── the other operand cannot change the result
 5 │ }
   ╰────
  help: Simplify this operation to `0` · code: [lint.redundant_operation]
