tests/ui/lint/snapshots/redundant_operation_or_true.snap
---
source: tests/ui/lint/mod.rs
---
  ● Operation always evaluates to `true`
   ╭─[test.lis:4:11]
 3 │   let b = true
 4 │   let _ = b || true
   ·           ────┬────
   ·               ╰── the other operand cannot change the result
 5 │ }
   ╰────
  help: Simplify this operation to `true` · code: [lint.redundant_operation]
